refactor: determine host:port with URL